# MaaAssistantArknights

src/Rust/: .gitignore  Cargo.toml  config.schema.json  config.toml  pr.md
src/Rust/maa-rs/: Cargo.toml
src/Rust/maa-rs/src/: api.rs  config.rs  database.rs  main.rs
src/Rust/maa-rs/src/api/: connect.rs  run.rs  task.rs  uuid.rs  version.rs
src/Rust/maa-rs/tests/: tasks.http
src/Rust/maa-rs_sys/: Cargo.toml  build.rs
src/Rust/maa-rs_sys/src/: bind.rs  lib.rs
src/Rust/maars/: Cargo.toml  README.md  build.rs
src/Rust/maars/proposals/: callback_schema.md
src/Rust/maars/src/: lib.rs  types.rs
src/Rust/maars/src/types/: task.rs
src/Rust/maars_server/: Cargo.toml
src/Rust/maars_server/src/: api.rs  database.rs  main.rs
src/Rust/maars_server/src/api/: connect.rs  device.rs  instances.rs  task.rs  version.rs
src/Rust/src/: api.rs  config.rs  database.rs  maa_sys.rs  main.rs
src/Rust/src/api/: connect.rs  device.rs  instances.rs  message.rs  run.rs  task.rs  uuid.rs  version.rs
src/Rust/src/api/message/: drop.rs  get.rs
src/Rust/src/api/uuid/: all.rs
src/Rust/src/database/: msg.rs
src/Rust/tests/: uuid.http  version.http
