[package]
name = "maars"
version = "0.0.0"
edition = "2021"
build = "build.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pretty_assertions = "1.4"
thiserror = { workspace = true }
derive_more = "0.99"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.26", features = ["derive"] }

[build-dependencies]
bindgen = "0.69"
